Fixed the misaligned icon in the logo

--- a/login/style.css
+++ b/login/style.css
@@ -38,10 +38,12 @@ body {
     padding: var(--padding) clamp(10vw, 100px, 20vw);
     font-size: 40px;
     margin-top: 35%;
+    display: flex;
+    gap: 15px;
+    align-items: center;
 }
 .image [src='logo.svg'] {
-    height: 30px;
-    margin-right: 10px;
+    height: 50px;
 }
 .image p {
     text-align: center;
